--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -19,3 +19,8 @@ api = "api.main:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.6",
+]
